syntax = "proto3";

option csharp_namespace = "BusinessSharkService";

package auth;

service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshRequest) returns (AuthResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  string expires_in = 3;
  int32  playerId = 4;
  int32  companyId = 5;
  string companyName = 6;
}
